# llvm-project

./: README.md
llvm/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/include/: Debug.h  State.h  Utils.h
openmp/libomptarget/DeviceRTL/src/: Debug.cpp  Mapping.cpp  Parallelism.cpp  Reduction.cpp  Synchronization.cpp  Utils.cpp  Workshare.cpp
openmp/libomptarget/plugins/graphcore/: CMakeLists.txt
openmp/libomptarget/plugins/graphcore/cmake/: FindPoplar.cmake
updown/: CMakeLists.txt  README.md  pythonsyntax.cpp
updown/Jinja2CppLight/src/: Jinja2CppLight.cpp  Jinja2CppLight.h
updown/apps/: CMakeLists.txt
updown/apps/common/snap-core/: Makefile
updown/apps/mapreduce/: GenMapreduceEFA.py  updownMapReduce.cpp
updown/apps/pagerank/: GenPagerankEFA.py  pagerank_upstream_padding.cpp
updown/apps/triangleCount/: triangle-count-upstream-vertex-th.cpp
updown/common/include/: debug.h
updown/docs/: Doxyfile  doxygen.cfg
updown/docs/html/: annotated.html  annotated_dup.js  class_up_down_1_1_sim_u_d_runtime__t-members.html  class_up_down_1_1_sim_u_d_runtime__t.html  class_up_down_1_1_sim_u_d_runtime__t.js  class_up_down_1_1_u_d_runtime__t-members.html  class_up_down_1_1_u_d_runtime__t.html  class_up_down_1_1_u_d_runtime__t.js  class_up_down_1_1_u_d_runtime__t_1_1ud__mapped__memory__t-members.html  class_up_down_1_1_u_d_runtime__t_1_1ud__mapped__memory__t.html  class_up_down_1_1_u_d_runtime__t_1_1ud__mapped__memory__t.js  class_up_down_1_1event__t-members.html  class_up_down_1_1event__t.html  class_up_down_1_1event__t.js  class_up_down_1_1operands__t-members.html  class_up_down_1_1operands__t.html  class_up_down_1_1operands__t.js  class_upstream___py_intf-members.html  class_upstream___py_intf.html  class_upstream___py_intf.js  classes.html  debug_8h_source.html  dir_0d353d24d0afa59909efab6593124f6d.html  dir_11fbc4217d50ab21044e5ad6614aede5.html  dir_11fbc4217d50ab21044e5ad6614aede5.js  dir_16d0603122b776fa54cf5678a0902ded.html  dir_16d0603122b776fa54cf5678a0902ded.js  dir_3015efd6df4572deb98111f0353e5032.html  dir_3030e73cd2f1308605fc37490e6f3e2c.html  dir_3030e73cd2f1308605fc37490e6f3e2c.js  dir_52c30f398023c550458892c9d3b60897.html  dir_665704694494871b6f6ab07fa19c9407.html  dir_67b55deb5940a6b63a778e938eb2b24d.html  dir_67b55deb5940a6b63a778e938eb2b24d.js  dir_8224a8a129e2f8307264a71a4e191fc6.html  dir_8be8351fc9ea0df676e6bb1bae1c4c24.html  dir_9a1edd4a0338a4ccba9f6d0c5d3defa2.html  dir_bdd9a5d540de89e9fe90efdfc6973a4f.html  dir_c2826f37176a201ceba37bdee7e7215a.html  dir_c5d564edb137588d4eaf41d6317cedfc.html  (+37 more)
updown/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
updown/docs/latex/: annotated.tex  class_up_down_1_1_sim_u_d_runtime__t.eps  class_up_down_1_1_sim_u_d_runtime__t.tex  class_up_down_1_1_u_d_runtime__t.eps  class_up_down_1_1_u_d_runtime__t.tex  class_up_down_1_1_u_d_runtime__t_1_1ud__mapped__memory__t.tex  class_up_down_1_1event__t.tex  class_up_down_1_1operands__t.tex  class_upstream___py_intf.tex  debug_8h_source.tex  files.tex  hierarchy.tex  md___users_josemonsalvediaz__documents__project38_llvm_updown__r_e_a_d_m_e.tex  md___users_josemonsalvediaz__documents__project38_llvm_updown_tutorials__oct21_22__r_e_a_d_m_e.tex  md___users_josemonsalvediaz__documents__project38_llvm_updown_ubenchmarks__r_e_a_d_m_e.tex  md___users_josemonsalvediaz__documents__tmp_llvm_project_updown__r_e_a_d_m_e.tex  refman.tex  simupdown_8h_source.tex  struct_event.tex  struct_up_down_1_1_u_d_runtime__t_1_1base__addr__t.tex  struct_up_down_1_1_u_d_runtime__t_1_1ud__abstract__machine__t.tex  struct_up_down_1_1_u_d_runtime__t_1_1ud__mapped__memory__t_1_1mem__region__t.tex  struct_up_down_1_1ud__machine__t.tex  structemulator__stats.tex  todo.tex  updown_8h_source.tex  updown__config_8h_source.tex  upstream__pyintf_8hh_source.tex
updown/runtime/: CMakeLists.txt
updown/runtime/include/: debug.h  updown.h  updown_config.h
updown/runtime/src/: updown.cpp
updown/runtime/tests/: CMakeLists.txt  event_t.cpp  operands_t.cpp  rt_calc_addrmap.cpp  rt_mm_malloc_free.cpp
updown/simruntime/: CMakeLists.txt
updown/simruntime/include/: simupdown.h  upstream_pyintf.hh
updown/simruntime/src/: simupdown.cpp  upstream_pyintf.cc
updown/simruntime/src/emulator/: EFA.py  EfaExecutor.py  EfaExecutor_multilane_nothread.py  EfaUtil.py  GenJaccardEFAVertex.py  GenMapreduceEFA.py  GenMemoryGraph.py  GenPagerankEFA.py  GenTriCountEFA.py  GenTriCountEFAMay19.py  GenTriCountEFAMay19_orig.py  GenTriCountEFAVertex.py  GenTriCountEFA_Feb24.py  GenUpDecodeEFA.py  MachineCode.py  MicroBenchEFA.py  SnappyWriter.py  StattestsEFA.py  memory.py  simpleEFA.py  top.py
updown/simruntime/tests/: CMakeLists.txt  gatherEFA.py  memcpyEFA.py  send4EFA.py  simpleEFA.py  simrt_gather_dram.cpp  simrt_memcpy.cpp  simrt_mm_memcpy.cpp  simrt_pyEmu_memcpy.cpp  simrt_pyEmu_mm_memcpy.cpp  simrt_pyEmu_mm_memcpy_multiud.cpp  simrt_pyEmu_send4.cpp  simrt_pyEmu_sendevent.cpp  simrt_pyEmu_t2ud_signal.cpp  simrt_send_event.cpp  t2ud_signalEFA.py
updown/simruntime/ubenchmarks/: CMakeLists.txt
updown/simruntime/ubenchmarks/eventrate/: README.md  eventRate.cpp
updown/templates/: python.jinja  updown_init.jinja
updown/tutorials/Oct21_22/: README.md
updown/ubenchmarks/: CMakeLists.txt  Makefile  README.md
updown/ubenchmarks/eventrate/: eventRate.cpp  eventRateEFA.py
updown/ubenchmarks/launchLatency/: launchLatency.cpp  launchLatencyEFA.py
updown/ubenchmarks/updownDRAMReadBW/: updownDRAMReadBW.cpp  updownDRAMReadBWEFA.py
updown/ubenchmarks/updownDRAMWriteBW/: updownDRAMWriteBW.cpp  updownDRAMWriteBWEFA.py
(+158 files in other folders)
